# innowise_laboratory

lecture_1/my_project/: README.md  main.py  pyproject.toml
lecture_1/my_project/tests/: test_colors.py
lecture_2/: main.py  pyproject.toml
lecture_2/tests/: test_profile.py
lecture_3/: main.py  pyproject.toml
lecture_4/: create_database.py  queries.sql  school.db
lecture_5/book_api/: dependencies.py  main.py  start.bat
lecture_6/: Dockerfile
lecture_6/book_api/: crud.py  database.py  main.py  schemas.py
