[project]
name = "lecture-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila277",email = "125901237+Danilakov277@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lecture_3", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
